# dlai

./: L1-Model_prompt_parser.ipynb  README.md  main.py  pyproject.toml
src/exercises/: L1-Model_prompt_parser.ipynb  L2-Memory.ipynb  L3-Chains.ipynb  L4-qna-over-documents.ipynb  L4-qna-rag-step-by-step.ipynb  L5-evaluation.ipynb
src/fundamentals-of-ai-agents-using-rag-langchain/Building AI Agents from Scratch - Daily Dish-v1/: Building AI Agents from Scratch - Daily Dish-v1.ipynb
