[project]
name = "dlai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docarray>=0.41.0",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.10",
    "langchain-community>=0.3.0",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.1",
    "openai>=2.21.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
